--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.3
 aiosignal==1.4.0
@@ -17,8 +16,10 @@ cryptography==46.0.4
 dataclasses-json==0.6.7
 distro==1.9.0
 faiss-cpu==1.13.2
+filelock==3.20.3
 filetype==1.2.0
 frozenlist==1.8.0
+fsspec==2026.2.0
 gitdb==4.0.12
 GitPython==3.1.46
 google-ai-generativelanguage==0.6.15
@@ -33,12 +34,15 @@ greenlet==3.3.1
 grpcio==1.76.0
 grpcio-status==1.71.2
 h11==0.16.0
+hf-xet==1.2.0
 httpcore==1.0.9
 httplib2==0.31.2
 httpx==0.28.1
 httpx-sse==0.4.3
+huggingface_hub==0.36.1
 idna==3.11
 Jinja2==3.1.6
+joblib==1.5.3
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.26.0
@@ -48,6 +52,7 @@ langchain-classic==1.0.1
 langchain-community==0.4.1
 langchain-core==1.2.8
 langchain-google-genai==4.2.0
+langchain-huggingface==1.2.0
 langchain-text-splitters==1.1.0
 langgraph==1.0.7
 langgraph-checkpoint==4.0.0
@@ -56,9 +61,11 @@ langgraph-sdk==0.3.3
 langsmith==0.6.8
 MarkupSafe==3.0.3
 marshmallow==3.26.2
+mpmath==1.3.0
 multidict==6.7.1
 mypy_extensions==1.1.0
 narwhals==2.16.0
+networkx==3.6.1
 numpy==2.4.2
 orjson==3.11.7
 ormsgpack==1.12.2
@@ -83,19 +90,32 @@ python-dotenv==1.2.1
 pytz==2025.2
 PyYAML==6.0.3
 referencing==0.37.0
+regex==2026.1.15
 requests==2.32.5
 requests-toolbelt==1.0.0
 rpds-py==0.30.0
 rsa==4.9.1
+safetensors==0.7.0
+scikit-learn==1.8.0
+scipy==1.17.0
+sentence-transformers==5.2.2
+setuptools==80.10.2
+shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.46
 streamlit==1.54.0
+sympy==1.14.0
 tenacity==9.1.2
+threadpoolctl==3.6.0
+tokenizers==0.22.2
 toml==0.10.2
+torch==2.10.0
 tornado==6.5.4
 tqdm==4.67.3
+transformers==4.57.6
+typer-slim==0.21.1
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
@@ -108,18 +128,3 @@ websockets==15.0.1
 xxhash==3.6.0
 yarl==1.22.0
 zstandard==0.25.0
-=======
-streamlit
-python-dotenv
-pypdf
-faiss-cpu
-
-langchain
-langchain-core
-langchain-community
-langchain-text-splitters
-
-langchain-google-genai
-google-generativeai
-numpy
->>>>>>> cce955e867012f493badb46039fe8d02376b615a
